Added test content for testing purposes

--- a/Index.html
+++ b/Index.html
@@ -8,20 +8,64 @@
   </head>
   <body>
     <div class="container">
-      <div class="navcontainer">
-        <nav>
-          <ul id="navList">
-            <li><p id="navlogo">Dish Discovery</p></li>
-            <li>
-              <div>
-                <a href="#">Home</a>
-                <a href="#">Contact</a>
-                <a href="#">About</a>
+      <header>
+        <div class="navcontainer">
+          <nav>
+            <ul id="navList">
+              <li><p id="navlogo">Dish Discovery</p></li>
+              <li>
+                <div id="navitems">
+                  <a href="#" class="navlink">Home</a>
+                  <a href="#" class="navlink">Contact</a>
+                  <a href="#" class="navlink">About</a>
+                </div>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <main>
+        <div class="contentbox">
+          <section>
+            <div class="item">
+              <div class="leftbox">
+                <h2>gulab jamun</h2>
+                <h2>Ingredients</h2>
+                <ul>
+                  <li>Khoya (Milk Solid)</li>
+                  <li>All-purpose flour (Maida)</li>
+                  <li>Baking powder</li>
+                  <li>Ghee (Clarified Butter)</li>
+                  <li>Milk or Water</li>
+                  <li>Sugar Syrup</li>
+                </ul>
+                <h2>Recipe</h2>
+                <ol>
+                  <li>
+                    Prepare a soft dough using khoya, all-purpose flour, and a
+                    pinch of baking powder.
+                  </li>
+                  <li>Shape the dough into smooth balls.</li>
+                  <li>Heat ghee and fry the balls until golden brown.</li>
+                  <li>Prepare sugar syrup with water, sugar, and flavoring.</li>
+                  <li>
+                    Soak the fried Gulab Jamun in the warm sugar syrup for 1-2
+                    hours.
+                  </li>
+                </ol>
               </div>
-            </li>
-          </ul>
-        </nav>
-      </div>
+              <div class="rightbox">
+                <img src="Assets/gulab_jamun.png" alt="Error" />
+              </div>
+            </div>
+          </section>
+        </div>
+      </main>
+      <footer>
+        <div class="footerbox">
+          <p>Copyright &copy; Dish_Discovery Pvt Ltd 2023 All Right Reserved</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
