Updated design and content

--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
               <div class="leftbox">
                 <h2>gulab jamun</h2>
                 <h2>Ingredients</h2>
-                <ul>
+                <ul class="Ingredientsbox">
                   <li>Khoya (Milk Solid)</li>
                   <li>All-purpose flour (Maida)</li>
                   <li>Baking powder</li>
@@ -40,7 +40,7 @@
                   <li>Sugar Syrup</li>
                 </ul>
                 <h2>Recipe</h2>
-                <ol>
+                <ol class="Recipebox">
                   <li>
                     Prepare a soft dough using khoya, all-purpose flour, and a
                     pinch of baking powder.
@@ -55,7 +55,63 @@
                 </ol>
               </div>
               <div class="rightbox">
-                <img src="Assets/gulab_jamun.png" alt="Error" />
+                <img src="Assets/images.jpg" alt="Error" />
+                <div class="overlay">
+                  <a
+                    href="https://www.zomato.com/"
+                    style="text-decoration: none"
+                    >Click here to buy</a
+                  >
+                </div>
+              </div>
+            </div>
+          </section>
+          <section>
+            <div class="item">
+              <div class="leftbox">
+                <h2>Milk Barfi</h2>
+                <h2>Ingredients</h2>
+                <ul class="Ingredientsbox">
+                  <li>Milk Powder</li>
+                  <li>Sugar</li>
+                  <li>Cardamom Powder</li>
+                  <li>Ghee (Clarified Butter)</li>
+                  <li>Chopped Nuts</li>
+                  <li>Saffron</li>
+                </ul>
+                <h2>Recipe</h2>
+                <ol class="Recipebox">
+                  <li>
+                    In a large pan, mix milk powder, sugar, and ghee. Cook on
+                    low heat, stirring continuously,
+                  </li>
+                  <li>
+                    Once the mixture thickens, add cardamom powder and mix well
+                    to infuse the flavor.
+                  </li>
+                  <li>
+                    Mix in the chopped nuts of your choice, reserving some for
+                    garnishing.
+                  </li>
+                  <li>
+                    Transfer the mixture to a greased tray or pan. Press it down
+                    evenly using a spatula.
+                  </li>
+                  <li>
+                    Allow the mixture to cool for a while. Once it's slightly
+                    firm.
+                  </li>
+                </ol>
+              </div>
+              <div class="rightbox">
+                <img src="Assets/badam-barfi-scaled-225x225.jpg" alt="Error" />
+                <div class="overlay">
+                  <a
+                    href="https://www.zomato.com/"
+                    style="text-decoration: none"
+                    >Click here to buy</a
+                  >
+                </div>
               </div>
             </div>
           </section>
